# Galxe-holder-checker

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: image.yml  nix.yml  server.yml
benchmark/: 2025-04-10.md
nix/: machine.nix  module.nix  package.nix  server.nix  service.nix  shell.nix
src/: main.rs
